--- a/src/assets/css/l2/small.scss
+++ b/src/assets/css/l2/small.scss
@@ -844,7 +844,7 @@
     }
 
     .cart-item-edit:hover {
-        background-color: black;
+        background-color: rgb(168, 114, 64);
         box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 5px;
     }
 
@@ -853,10 +853,9 @@
     }
 
     .cart-item-remove:hover {
-        background-color: black;
+        background-color: rgb(105, 27, 47);
         box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 5px;
     }
-
 
     .navigation-item {
         font-size: 16px;
