--- a/src/assets/css/l2/big.scss
+++ b/src/assets/css/l2/big.scss
@@ -124,6 +124,61 @@
         font-family: "Source Sans Pro", sans-serif;
     }
 
+    #confirm-background {
+        position: fixed;
+        z-index: 6;
+        width: 100vw;
+        min-height: 162.5vh;
+        background-color: rgba(0, 0, 0, 0.4);
+        transform: scale(0, 0);
+    }
+
+    #confirm {
+        position: fixed;
+        width: 500px;
+        padding: 10px;
+        height: 150px;
+        top: 40px;
+        border-radius: 5px;
+        z-index: 8;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 15px;
+        align-items: center;
+        box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 5px;
+        transform: translateY(-200px);
+        opacity: 0%;
+        transition: all .2s;
+        background-color: $main;
+        color: rgb(138, 41, 66);
+    }
+
+    #confirm-message {
+        width: 450px;
+        font-size: 15px;
+        text-align: center;
+        font-family: "Source Sans Pro", sans-serif;
+    }
+
+    #confirm-options {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    #confirm-cancel-button {
+        padding: 15px 30px 15px 30px;
+        border-radius: 5px;
+    }
+
+    #confirm-confirm-button {
+        padding: 15px 30px 15px 30px;
+        border-radius: 5px;
+        background-color: rgb(138, 41, 66);
+    }
+
     #options-modal-background {
         position: fixed;
         z-index: 3;
@@ -144,7 +199,7 @@
 
     #options-modal {
         position: fixed;
-        margin-top: 15%;
+        margin-top: 5%;
         z-index: 4;
         width: 40%;
         padding: 20px;
@@ -204,7 +259,7 @@
 
     #item-image-modal {
         border-radius: 10px;
-        width: 250px;
+        width: 200px;
         align-self: center;
     }
 
@@ -253,7 +308,7 @@
 
     #item-description-modal {
         color: $complementary;
-        font-size: 18px;
+        font-size: 16px;
         font-family: "Source Sans Pro", sans-serif;
     }
 
@@ -426,6 +481,11 @@
         opacity: 100% !important;
     }
 
+    .confirm-open {
+        transform: translateY(0px) !important;
+        opacity: 100% !important;
+    }
+
     .alert-success {
         background-color: #c3f3d7;
         color: #24ad5d;
@@ -455,6 +515,10 @@
 
     .alert-icon {
         font-size: 27px;
+    }
+
+    .confirm-icon {
+        font-size: 35px;
     }
 
     .objectives-status-indicator-icon {
@@ -487,6 +551,10 @@
         transform: translateY(-3px);
         box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 5px;
         cursor: pointer;
+    }
+
+    .confirm-background-open {
+        transform: scale(1, 1) !important;
     }
 
     .objectives-modal-background-open {
