--- a/src/assets/css/l2/medium.scss
+++ b/src/assets/css/l2/medium.scss
@@ -120,6 +120,61 @@
         font-family: "Source Sans Pro", sans-serif;
     }
 
+    #confirm-background {
+        position: fixed;
+        z-index: 6;
+        width: 100vw;
+        min-height: 162.5vh;
+        background-color: rgba(0, 0, 0, 0.4);
+        transform: scale(0, 0);
+    }
+
+    #confirm {
+        position: fixed;
+        width: 280px;
+        padding: 10px;
+        height: 150px;
+        top: 40px;
+        border-radius: 5px;
+        z-index: 8;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 15px;
+        align-items: center;
+        box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 5px;
+        transform: translateY(-200px);
+        opacity: 0%;
+        transition: all .2s;
+        background-color: $main;
+        color: rgb(138, 41, 66);
+    }
+
+    #confirm-message {
+        width: 240px;
+        font-size: 15px;
+        text-align: center;
+        font-family: "Source Sans Pro", sans-serif;
+    }
+
+    #confirm-options {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    #confirm-cancel-button {
+        padding: 15px 30px 15px 30px;
+        border-radius: 5px;
+    }
+
+    #confirm-confirm-button {
+        padding: 15px 30px 15px 30px;
+        border-radius: 5px;
+        background-color: rgb(138, 41, 66);
+    }
+
     #options-modal-background {
         position: fixed;
         z-index: 6;
@@ -436,6 +491,11 @@
         opacity: 100% !important;
     }
 
+    .confirm-open {
+        transform: translateY(0px) !important;
+        opacity: 100% !important;
+    }
+
     .alert-success {
         background-color: #c3f3d7;
         color: #24ad5d;
@@ -465,6 +525,10 @@
 
     .alert-icon {
         font-size: 27px;
+    }
+
+    .confirm-icon {
+        font-size: 35px;
     }
 
     .objectives-status-indicator-icon {
@@ -497,6 +561,10 @@
         transform: translateY(-3px);
         box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 5px;
         cursor: pointer;
+    }
+
+    .confirm-background-open {
+        transform: scale(1, 1) !important;
     }
 
     .objectives-modal-background-open {
