--- a/src/assets/css/l2/big.scss
+++ b/src/assets/css/l2/big.scss
@@ -941,7 +941,7 @@
     .menu-item {
         background-color: $main;
         width: 800px;
-        height: 100px;
+        height: 150px;
         padding: 50px;
         border-radius: 10px;
         display: flex;
@@ -972,9 +972,30 @@
         font-weight: lighter;
     }
 
-    .item-description {
+    .item-ingredients {
+        max-width: 90%;
+        display: flex;
+        flex-direction: column;
+        gap: 3px;
+    }
+
+    .item-ingredient {
+        display: flex;
+        gap: 5px;
+        justify-content: flex-start;
+    }
+
+    .item-ingredient-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 16px;
+        height: 16px;
+    }
+
+    .item-ingredient-description {
+        font-size: 12px;
         width: 90%;
-        color: $complementary;
     }
 
     .item-price {
