--- a/src/assets/css/l2/medium.scss
+++ b/src/assets/css/l2/medium.scss
@@ -954,7 +954,7 @@
     .menu-item {
         background-color: $main;
         width: 80%;
-        height: 100px;
+        height: 150px;
         padding: 30px;
         border-radius: 10px;
         display: flex;
@@ -986,14 +986,30 @@
         font-weight: lighter;
     }
 
-    .item-description {
+    .item-ingredients {
+        max-width: 90%;
+        display: flex;
+        flex-direction: column;
+        gap: 3px;
+    }
+
+    .item-ingredient {
+        display: flex;
+        gap: 5px;
+        justify-content: flex-start;
+    }
+
+    .item-ingredient-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 15px;
+        height: 15px;
+    }
+
+    .item-ingredient-description {
+        font-size: 11px;
         width: 90%;
-        overflow: hidden;
-        font-size: 10px;
-        color: $complementary;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
     }
 
     .item-price {
