--- a/src/assets/css/l2/medium.scss
+++ b/src/assets/css/l2/medium.scss
@@ -120,6 +120,35 @@
         font-family: "Source Sans Pro", sans-serif;
     }
 
+    #finish-screen {
+        position: fixed;
+        width: calc(100vw - 40px);
+        height: calc(100vh - 40px);
+        padding: 20px;
+        top: 0px;
+        z-index: 9;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        background-color: rgb(23, 172, 135);
+        color: $main;
+        font-family: "Source Sans Pro", sans-serif;
+        font-size: 25px;
+        transition: all .2s;
+        text-align: center;
+    }
+
+    #finish-screen-icon {
+        width: 75px;
+        height: 75px;
+    }
+
+    #finish-screen-text {
+        font-size: 18px;
+    }
+
     #confirm-background {
         position: fixed;
         z-index: 6;
